<resources>
    <string name="app_name">NFC-Gladys</string>
    <string name="song_prompt">Choose a song</string>
    <string name="title_create_ambiance_activity">Create Ambience</string>
    <string name="atom_nameHint">no data</string>
    <string name="buttonAddModule">Add new module</string>
    <string name="menu_settings">Settings</string>




    <string-array name="song_arrays">
        <item>Act a fool</item>
        <item>Will.i.am</item>
        <item>Bref</item>
        <item>COUP DETAT (Feat. Diplo and Baauer)</item>
        <item>Who You?</item>
        <item>Niliria (Feat. Missy Elliott) - Missy Elliott ver.</item>
        <item>Black (Feat. Sky Ferreira)</item>
        <item>India</item>
    </string-array>
    <string name="explanation">NFC tag detected!</string>
    <string name="nfc_disabled">NFC is disabled.</string>
    <string name="unsupported_nfc">This device does not support NFC</string>
    <string name="success_write_tag">Success: Wrote ambience to NFC tag</string>
    <string name="error_unwritable_tag">Error: tag not writable</string>
    <string name="error_small_tag">Error: tag too small</string>
    <string name="tag_detected">NFC tag detected!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="list_ambience_unselected">No infos on the selection were found</string>
    <string name="music_tracks">Music tracks :</string>
    <string name="volume">Volume</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="large_text">Large Text</string>
    <string name="small_text">Small Text</string>
    <string name="select_color">Select a color</string>
    <string name="write">Write</string>
    <string name="toggle">Toggle</string>
    <string name="name">Name :</string>
    <string name="save_and_quit">Save and Quit</string>
    <string name="row_title">Row title</string>
    <string name="song">Song:</string>
    <string name="time">Time</string>
    <string name="Alarm">Alarm</string>
    <string name="AlarmPlay">Play</string>
    <string name="AlarmSong">Song :</string>
    <string name="AlarmStop">Stop</string>
    <string name="AlarmTime">Time</string>
    <string name="AmbianceTitle">Title</string>
    <string name="Back">Back</string>
    <string name="Cancel">Cancel</string>
    <string name="ChooseColor">Pick a color</string>
    <string name="Close">Close</string>
    <string name="ColorList">Color List</string>
    <string name="CreateAmbiancce_CannotSaveModule">Cannot save this module</string>
    <string name="CreateAmbiance">Create ambience</string>
    <string name="Email">E-mail: </string>
    <string name="ErrTagNotWritable">Error: unwrittable tag</string>
    <string name="ErrTagTooSmall">Error: tag too small</string>
    <string name="IpAddress">IP address:</string>
    <string name="Light">Light</string>
    <string name="LightBrightness">Brightness</string>
    <string name="LightColor">Color</string>
    <string name="Music">Music</string>
    <string name="MusicPause">Pause</string>
    <string name="MusicPlay">Play</string>
    <string name="MusicStop">Stop</string>
    <string name="Next">Next</string>
    <string name="OnColorSelected">onColorSelected</string>
    <string name="Password">Password:</string>
    <string name="ReadTag">Read Tag</string>
    <string name="SelectModule">Select module</string>
    <string name="StopAlarm">Stop alarm</string>
    <string name="SuccessWrote">Success: Wrote ambience to nfc tag</string>
    <string name="WriteTag">Write Tag</string>
</resources>
